#2010 Reestructurar els mòduls per adequar-se a l’estàndard
- Correcions per poder crear tipus d'expedients i expedients de tipus
estats